# rusm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  rusm.toml  rustfmt.toml
.cargo/: config.toml
bench/rusm-bench/: Cargo.toml
bench/rusm-bench/src/: componentstorm.rs  config.rs  connectionscale.rs  connectionstorm.rs  cryptoops.rs  distributedfanout.rs  engine.rs  fairness.rs  faultrecovery.rs  httpthroughput.rs  kvstorm.rs  lib.rs  main.rs  modulestorm.rs  pingpong.rs  profile.rs  profile_tuning.rs  protocol.rs  pubsubfanout.rs  report.rs  runner.rs  sample.rs  scenario.rs  server.rs  serving.rs  spawnstorm.rs  ssefanout.rs  streampipe.rs  synthetic.rs  wsecho.rs
bench/rusm-bench/tests/: server.rs
bench/rusm-loadtest/: Cargo.toml
bench/rusm-loadtest/src/: capacity.rs  conn.rs  http.rs  lib.rs  main.rs
crates/rusm-cluster/: Cargo.toml  README.md
crates/rusm-cluster/src/: lib.rs
crates/rusm-jsc/: Cargo.toml  README.md
crates/rusm-jsc/src/: lib.rs
crates/rusm-kv/: Cargo.toml  README.md
crates/rusm-kv/src/: lib.rs
crates/rusm-logfmt/: Cargo.toml  README.md
crates/rusm-logfmt/src/: lib.rs
crates/rusm-metrics/: Cargo.toml  README.md
crates/rusm-metrics/src/: counter.rs  histogram.rs  lib.rs  timeseries.rs
crates/rusm-node/: Cargo.toml  README.md
crates/rusm-node/src/: config.rs  lib.rs  node.rs  profile.rs  protocol.rs  routes.rs
crates/rusm-observer/: Cargo.toml  README.md
crates/rusm-observer/src/: lib.rs  observer.rs  types.rs
crates/rusm-otp/: Cargo.toml  README.md
crates/rusm-otp/src/: exit.rs  lib.rs  lifecycle.rs  message.rs  net.rs  pid.rs  runtime.rs  signal.rs  stream.rs  supervisor.rs
crates/rusm-rs/: Cargo.toml  README.md
crates/rusm-rs-macros/: Cargo.toml  README.md
crates/rusm-rs-macros/src/: lib.rs
crates/rusm-rs-macros/wit/: world.wit
crates/rusm-rs/src/: http.rs  kv.rs  lib.rs  logging.rs  pubsub.rs  supervisor.rs  wire.rs  ws.rs
crates/rusm-rs/wit/: world.wit
crates/rusm-wasm/: Cargo.toml  README.md
crates/rusm-wasm/js-http-runner/: Cargo.toml  build.sh  js_http_runner.wasm
crates/rusm-wasm/js-http-runner/bridge/: http.js
crates/rusm-wasm/js-http-runner/src/: lib.rs  main.rs
crates/rusm-wasm/js-http-runner/wit/: world.wit
crates/rusm-wasm/js-runner/: Cargo.toml  build.sh  js_runner.wasm  rusm.d.ts  wasi_snapshot_preview1.reactor.wasm
crates/rusm-wasm/js-runner/bridge/: kv.js  process.js  rpc.js  webapi.js
crates/rusm-wasm/js-runner/src/: lib.rs
crates/rusm-wasm/js-runner/wit/: world.wit
crates/rusm-wasm/runtimes/: js_http_runner.wasm  js_runner.wasm
crates/rusm-wasm/src/: actor.rs  caps.rs  lib.rs
crates/rusm-wasm/src/bridges/: access.rs  http.rs  mod.rs  resident.rs  routed.rs  wasip1.rs  wasip2.rs  wasip3.rs  ws.rs
crates/rusm-wasm/src/bridges/resident/: mod.rs  pool.rs  route.rs  ws.rs
crates/rusm-wasm/tests/fixtures/: actor_kv.wasm  actor_timeout.wasm  cmd_writes.wasm  env_gate.wasm  http_hello.wasm  http_lean.wasm  js_runner.wasm  p3_random.wasm  pubsub_broker.wasm  rs_flaky.wasm  rs_guest.wasm  rs_handlers_demo.wasm  rs_kv.wasm  rs_resident_count.wasm  rs_resident_sse.wasm  rs_resident_ws.wasm  rs_resident_ws_echo.wasm  rs_service.wasm  rs_sup.wasm  rs_tag.wasm  rs_timeout.wasm  rs_ws_echo.wasm  sse_acceptor.wasm  sse_firehose.wasm  sse_pump.wasm  sse_ticker.wasm  stream_pipe.wasm  ts_http_hello.js  ts_resident_count.js  ts_resident_sse.js  ts_resident_ws.js  ts_resident_ws_echo.js  ts_sse_firehose.js  ts_sse_ticker.js  ts_ws_echo.js
crates/rusm-wasm/tests/fixtures/actor-echo/: Cargo.toml
crates/rusm-wasm/tests/fixtures/actor-echo/src/: lib.rs
crates/rusm-wasm/tests/fixtures/actor-kv/: Cargo.toml
crates/rusm-wasm/tests/fixtures/actor-kv/src/: lib.rs
crates/rusm-wasm/tests/fixtures/actor-kv/wit/: world.wit
crates/rusm-wasm/tests/fixtures/actor-timeout/: Cargo.toml
crates/rusm-wasm/tests/fixtures/actor-timeout/src/: lib.rs
crates/rusm-wasm/tests/fixtures/actor-timeout/wit/: world.wit
crates/rusm-wasm/tests/fixtures/callback/: Cargo.toml
crates/rusm-wasm/tests/fixtures/callback/src/: lib.rs
crates/rusm-wasm/tests/fixtures/callback/wit/: world.wit
crates/rusm-wasm/tests/fixtures/cmd-writes/: Cargo.toml
crates/rusm-wasm/tests/fixtures/env-gate/: Cargo.toml
crates/rusm-wasm/tests/fixtures/handlers-demo/: Cargo.toml
crates/rusm-wasm/tests/fixtures/http-hello/: Cargo.toml
crates/rusm-wasm/tests/fixtures/http-lean/: Cargo.toml
crates/rusm-wasm/tests/fixtures/js-runner/: Cargo.toml
crates/rusm-wasm/tests/fixtures/p3-random/: Cargo.toml
crates/rusm-wasm/tests/fixtures/pubsub-broker/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-flaky/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-guest/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-kv/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-resident-count/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-resident-sse/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-resident-ws/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-resident-ws-echo/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-service/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-sup/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-tag/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-timeout/: Cargo.toml
crates/rusm-wasm/tests/fixtures/rs-ws-echo/: Cargo.toml
crates/rusm-wasm/tests/fixtures/sse-acceptor/: Cargo.toml
crates/rusm-wasm/tests/fixtures/sse-firehose/: Cargo.toml
crates/rusm-wasm/tests/fixtures/sse-pump/: Cargo.toml
crates/rusm-wasm/tests/fixtures/sse-ticker/: Cargo.toml
crates/rusm-wasm/tests/fixtures/stream-pipe/: Cargo.toml
crates/rusm-wasm/tests/fixtures/ts-http-hello/: index.ts
crates/rusm-wasm/tests/fixtures/ts-sse-firehose/: index.ts
crates/rusm-wasm/tests/fixtures/ts-sse-ticker/: index.ts
crates/rusm-wasm/tests/fixtures/ts-ws-echo/: index.ts
crates/rusm-wasm/wit/: world.wit
crates/rusm-wire/: Cargo.toml  README.md
crates/rusm-wire/src/: lib.rs
rusm-cli/: Cargo.toml  README.md
rusm-cli/src/: app.rs  endpoint.rs  lib.rs  main.rs  render.rs  repl.rs  scaffold.rs
(+146 files in other folders)
