# RUSM — an Erlang-inspired WebAssembly runtime in Rust.
#
# This is the Cargo *workspace* root. Each member crate has a single, focused
# responsibility (see `docs/01-architecture.md`). Phase 0 ships the
# observability + benchmark foundation; the runtime crates (engine, processes,
# host ABI) arrive in later phases — see `docs/02-roadmap.md`.
[workspace]
resolver = "2"
members = [
    "crates/rusm-otp",
    "crates/rusm-wasm",
    "crates/rusm-wire",
    "crates/rusm-cluster",
    "crates/rusm-metrics",
    "crates/rusm-observer",
    "bench/rusm-bench",
    "bench/rusm-loadtest",
    "rusm-cli",
    "xtask",
]
# Guest test fixtures are wasm-only crates built separately for wasm32-wasip2 and
# checked in as prebuilt .wasm; they must not build for the host target. `rusm-rs`
# is the wasm-only Rust *guest* crate (depended on by guests, not the host).
exclude = ["crates/rusm-wasm/tests/fixtures", "crates/rusm-rs", "crates/rusm-rs-macros"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
authors = ["Paul Engel <pm_engel@icloud.com>"]
repository = "https://github.com/archan937/rusm"
description = "An Erlang-inspired WebAssembly runtime in Rust."

# Shared dependency versions live here so member crates stay in lock-step.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
