[package]
name = "rusm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The `rusm` command line: start a node and attach a live REPL to it."

[[bin]]
name = "rusm"
path = "src/main.rs"

[dependencies]
rusm-bench = { path = "../bench/rusm-bench" }
rusm-otp = { path = "../crates/rusm-otp" }
rusm-wasm = { path = "../crates/rusm-wasm" }
anyhow = { workspace = true }
dotenvy = "0.15"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
