[package]
name = "rusm-cli"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The `rusm` command line: start a node and attach a live REPL to it."

[[bin]]
name = "rusm"
path = "src/main.rs"

[dependencies]
rusm-node = { path = "../crates/rusm-node", version = "0.1.0" }
rusm-otp = { path = "../crates/rusm-otp", version = "0.1.0" }
rusm-wasm = { path = "../crates/rusm-wasm", version = "0.1.2" }
# Build-time QuickJS bytecode compiler (version-locked to the js-runner) so
# `rusm build` precompiles each TS bundle → wasm/<name>.qjsbc.
rusm-jsc = { path = "../crates/rusm-jsc", version = "0.1.0" }
anyhow = { workspace = true }
dotenvy = "0.15"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
