[package]
name = "rusm-cli"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The `rusm` command line: start a node and attach a live REPL to it."

[[bin]]
name = "rusm"
path = "src/main.rs"

[dependencies]
rusm-node = { path = "../crates/rusm-node", version = "0.1.1" }
rusm-otp = { path = "../crates/rusm-otp", version = "0.1.1" }
rusm-wasm = { path = "../crates/rusm-wasm", version = "0.1.3" }
# Build-time QuickJS bytecode compiler (version-locked to the js-runner) so
# `rusm build` precompiles each TS bundle → wasm/<name>.qjsbc.
rusm-jsc = { path = "../crates/rusm-jsc", version = "0.1.0" }
# Reading a kv-sourced component bundle from the node's durable store.
rusm-kv = { path = "../crates/rusm-kv", version = "0.1.0" }
anyhow = { workspace = true }
dotenvy = "0.15"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "io-std", "io-util", "signal"] }
# Fetching a URL-sourced component bundle (rustls — the cluster transport already
# pulls it, so no native-tls/openssl); a one-shot GET at load/reload time.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
