[package]
name = "rusm-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Load harness and synthetic data source driving the RUSM benchmark dashboard."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusm-metrics = { path = "../../crates/rusm-metrics" }
rusm-observer = { path = "../../crates/rusm-observer" }
rusm-otp = { path = "../../crates/rusm-otp" }
rusm-wasm = { path = "../../crates/rusm-wasm" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
toml = "1.1.2"
# Raise the open-file limit so the connection storm can hold many sockets at once
# — the connection ceiling is the OS, not the runtime.
rlimit = "0.10.2"
# Set SO_LINGER(0) on churned client sockets (RST close, no TIME_WAIT).
socket2 = "0.5.7"

# Runnable examples live in the repo-root `examples/<name>/` directories,
# each with its own README.
[[example]]
name = "host_components"
path = "../../examples/host_components/main.rs"

[[example]]
name = "host_ts_component"
path = "../../examples/host_ts_component/main.rs"

[[example]]
name = "headless_run"
path = "../../examples/headless_run/main.rs"

[[example]]
name = "embedded_node"
path = "../../examples/embedded_node/main.rs"

[[example]]
name = "synthetic_source"
path = "../../examples/synthetic_source/main.rs"

[[example]]
name = "observer_overhead"
path = "../../examples/observer_overhead/main.rs"
