[package]
name = "rusm-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Load harness and synthetic data source driving the RUSM benchmark dashboard."
# The benchmark harness is a repo/dev tool — never published. It is also the one
# crate that embeds cross-crate test fixtures (see scenario.rs/serving.rs).
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rusm-node = { path = "../../crates/rusm-node", version = "0.1.0" }
rusm-metrics = { path = "../../crates/rusm-metrics", version = "0.1.0" }
rusm-observer = { path = "../../crates/rusm-observer", version = "0.1.0" }
rusm-otp = { path = "../../crates/rusm-otp", version = "0.1.0" }
rusm-wasm = { path = "../../crates/rusm-wasm", version = "0.1.0" }
# The durable KV primitive, driven directly by the kv-storm engine (as a guest
# would, via the storage capability) for a factual durable-write throughput.
rusm-kv = { path = "../../crates/rusm-kv", version = "0.1.0" }
rusm-cluster = { path = "../../crates/rusm-cluster", version = "0.1.0" }
# The out-of-process load lib, reused by the live serving-scenario engines so the
# dashboard drives load through the same balter/capacity path as `rusm-loadtest`.
rusm-loadtest = { path = "../rusm-loadtest", version = "0.1.0" }
anyhow = { workspace = true }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
toml = "1.1.2"
# Raise the open-file limit so the connection storm can hold many sockets at once
# — the connection ceiling is the OS, not the runtime.
rlimit = "0.10.2"
# Set SO_LINGER(0) on churned client sockets (RST close, no TIME_WAIT).
socket2 = "0.5.7"
# Named errno (EINPROGRESS) for non-blocking connect in the connection-scale bench.
libc = "0.2"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
# A private temp dir for the kv-storm engine's redb file (cleaned up on Drop).
tempfile = "3"

# Runnable examples live in the repo-root `examples/<name>/` directories,
# each with its own README.
[[example]]
name = "host_components"
path = "../../examples/host_components/main.rs"

[[example]]
name = "host_ts_component"
path = "../../examples/host_ts_component/main.rs"

[[example]]
name = "headless_run"
path = "../../examples/headless_run/main.rs"

[[example]]
name = "embedded_node"
path = "../../examples/embedded_node/main.rs"

[[example]]
name = "synthetic_source"
path = "../../examples/synthetic_source/main.rs"

[[example]]
name = "observer_overhead"
path = "../../examples/observer_overhead/main.rs"

[[example]]
name = "cluster"
path = "../../examples/cluster/main.rs"

[[example]]
name = "cluster_fanout"
path = "../../examples/cluster_fanout/main.rs"

[[example]]
name = "http_bench"
path = "../../examples/http_bench/main.rs"

[[example]]
name = "ws_bench"
path = "../../examples/ws_bench/main.rs"

[[example]]
name = "sse_bench"
path = "../../examples/sse_bench/main.rs"

[[example]]
name = "connection_scale"
path = "../../examples/connection_scale/main.rs"
