[package]
name = "rusm-cluster"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "QUIC+TLS distributed transport for RUSM — connect nodes and message processes across them. Wasm-free, over rusm-otp."

[dependencies]
rusm-otp = { path = "../rusm-otp", version = "0.1.2" }
# QUIC over TLS 1.3 (default features: rustls-ring crypto + the Tokio runtime).
quinn = "0.11"
# Self-signed node identities (pre-shared cluster cert for now; a CA comes later).
rcgen = "0.10"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["test-util"] }
