[package]
name = "rusm-logfmt"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared formatting for RUSM's coloured, columnar log lines (palette, widths, timestamp, tty-gating)."

[dependencies]
