[package]
name = "rusm-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The RUSM node layer: the rusm.toml app manifest, resource profiles, and the live attach/observe protocol + node (process introspection over WebSocket)."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1.2"
rusm-otp = { path = "../rusm-otp", version = "0.1.0" }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

[dev-dependencies]
tempfile = "3"
