[package]
name = "rusm-otp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Wasm-free Erlang/OTP core of RUSM: processes, mailboxes, scheduling."

# Invariant: this crate must NOT depend on `wasmtime` or any Wasm type — the
# actor model stands alone. Wasm is a separate, optional backend (`rusm-wasm`).
[dependencies]
rusm-logfmt = { path = "../rusm-logfmt" }
dashmap = "6.2.1"
futures-util = { version = "0.3.32", default-features = false, features = ["alloc"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net", "io-util"] }

[dev-dependencies]
# `test-util` gives paused virtual time, for deterministic timer tests.
tokio = { version = "1.52.3", features = ["test-util"] }
