# rusm-rs — the ergonomic Rust *guest* crate: write a RUSM component (or service)
# in Rust over the `rusm:runtime` actor ABI — the Rust twin of rusm-ts. A guest
# crate depends on this via path, implements `rusm_rs::Guest` (or, later, a
# `#[rusm::service]` module), and `rusm_rs::export!`s its component. Built for
# wasm32-wasip2; excluded from the host workspace (wasm-only).
[package]
name = "rusm-rs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "The ergonomic Rust guest crate for RUSM: the actor API, services, and components."
repository = "https://github.com/archan937/rusm"

[dependencies]
wit-bindgen = "0.46"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# The `log` facade: a guest writes `log::info!`/`warn!`/`error!`/`debug!`; rusm-rs
# installs a logger (set up by the entry-point macros) that routes records to the host
# `log` op, which stamps the time, component name, pid, and colour. No init, no name/pid.
log = "0.4"
# The HTTP request/response wire types (with base64 bodies) are shared verbatim with
# the host (rusm-wasm) so the two can never drift. `version` (alongside `path`) is what
# crates.io resolves against once published; the path is used in-repo.
rusm-wire = { path = "../rusm-wire", version = "0.1.0" }
rusm-rs-macros = { path = "../rusm-rs-macros", version = "0.1.1" }
