[package]
name = "rusm-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Wasmtime backend for RUSM: each process runs as an isolated Wasm instance."

[dependencies]
rusm-otp = { path = "../rusm-otp" }
anyhow = { workspace = true }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time"] }
wasmtime = "45.0.1"
# Default features give WASI p1 + p2, which the wasip1/wasip2 bridges use. The
# `p3` feature is intentionally left off until a `wasip3` bridge actually uses it
# (no enabled-but-unused features).
wasmtime-wasi = "45.0.1"
