[package]
name = "rusm-wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Wasmtime backend for RUSM: each process runs as an isolated Wasm instance."

[dependencies]
rusm-otp = { path = "../rusm-otp" }
anyhow = { workspace = true }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
wasmtime = "45.0.1"
# p1 + p2 (default) for the wasip1/wasip2 bridges; `p3` for the wasip3 bridge
# (preview3 WASI on the component linker). Every enabled feature is used.
wasmtime-wasi = { version = "45.0.1", features = ["p3"] }
wasmtime-wasi-http = "45.0.1"
hyper = { version = "1", features = ["server", "http1"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
