[package]
name = "rusm-wasm"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Wasmtime backend for RUSM: each process runs as an isolated Wasm instance."
# Keep the published crate lean: the ~3 MB of `tests/fixtures/*.wasm` are only used
# by `#[cfg(test)]` code (never the library), so they don't belong in the package.
# The embedded js-runner artifacts (js-runner/*.wasm) live outside tests/ and ship.
exclude = ["tests/"]

[dependencies]
rusm-otp = { path = "../rusm-otp", version = "0.1.0" }
# The durable KV store surfaced to guests behind the `storage` capability.
rusm-kv = { path = "../rusm-kv", version = "0.1.0" }
anyhow = { workspace = true }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros", "time", "net"] }
wasmtime = "45.0.1"
# p1 + p2 (default) for the wasip1/wasip2 bridges; `p3` for the wasip3 bridge
# (preview3 WASI on the component linker). Every enabled feature is used.
wasmtime-wasi = { version = "45.0.1", features = ["p3"] }
wasmtime-wasi-http = "45.0.1"
hyper = { version = "1", features = ["server", "http1"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
# The resident-serving gateway speaks the JSON actor wire (request/reply envelopes);
# the request/response types (base64 bodies) are shared with the guest via rusm-wire.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusm-wire = { path = "../rusm-wire", version = "0.1.0" }

[dev-dependencies]
# The routed-gateway test drives the real manifest route matcher (a sibling crate;
# rusm-node depends only on rusm-otp, so no cycle) — proving the exact wiring rusm-cli uses.
rusm-node = { path = "../rusm-node", version = "0.1.0" }
