# The rusm-ts "js-http-runner": a raw wasi:http component that embeds rquickjs and
# runs a Bun-built TS/JS bundle's `fetch` handler — HTTP and **streaming SSE**. Raw
# wasi:http (not wstd) so the response body can be written incrementally while the
# rquickjs context (which is !Send) stays live on this fiber — see the crate docs.
# The bundle arrives via the RUSM_JS_BUNDLE env var (a per-component capability).
# Built for wasm32-wasip2 (needs wasi-sdk for QuickJS's C); checked in. Regenerate:
#   CC_wasm32_wasip2=$HOME/.wasi-sdk/bin/clang \
#   AR_wasm32_wasip2=$HOME/.wasi-sdk/bin/llvm-ar \
#   CFLAGS_wasm32_wasip2=--sysroot=$HOME/.wasi-sdk/share/wasi-sysroot \
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/js_http_runner.wasm ./js_http_runner.wasm
# (run from this crate dir; the .wasm is embedded by rusm-wasm via include_bytes!)
[workspace]

[package]
name = "js-http-runner"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "js_http_runner"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
wasip2 = "1.0.3"
rquickjs = "0.9"
anyhow = "1"
