# The rusm-ts "js-http-runner": a wasi:http component that embeds rquickjs and runs a
# Bun-built TS/JS bundle's `fetch` handler — HTTP and **streaming SSE**. Raw wasi:http
# (not wstd) so the response body can be written incrementally while the rquickjs context
# (which is !Send) stays live on this fiber — see the crate docs. The bundle arrives via
# the RUSM_JS_BUNDLE env var (a per-component capability).
#
# **Wizer-pre-initialized**: the QuickJS engine + the JS bridge are booted ONCE at build
# time and snapshotted into the image (`wizer.initialize`), so each per-request instance
# CoW-starts *warm* and only evals the (runtime) bundle + runs `fetch` — engine/bridge
# init is no longer paid per request. Still instance-per-request, never resident: a hung
# or crashed request can't block the server. The build is a core module (wit-bindgen) →
# wizer → `wasm-tools component new`; checked in under ../runtimes/. Regenerate: ./build.sh
[workspace]

[package]
name = "js-http-runner"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "js_http_runner"
path = "src/lib.rs"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
# wit-bindgen (not the `wasip2` crate) so the build produces a **core module** — which
# `wizer` can pre-initialize (snapshot the booted QuickJS engine + bridge into the image)
# before `wasm-tools component new` re-wraps wasi:http. See ./build.sh and the header above.
wit-bindgen = "0.46"
rquickjs = "0.9"
anyhow = "1"
