# The rusm-ts "js-runner": a component that embeds rquickjs and runs a JS bundle,
# bridging a `Process` global to the rusm:runtime actor world. A TS app is just a
# Bun-bundled .js the runner executes — one shared, sandboxed runner per process.
# Built for wasm32-wasip2 (needs wasi-sdk for QuickJS's C); checked in. Regenerate:
#   CC_wasm32_wasip2=$HOME/.wasi-sdk/bin/clang \
#   AR_wasm32_wasip2=$HOME/.wasi-sdk/bin/llvm-ar \
#   CFLAGS_wasm32_wasip2=--sysroot=$HOME/.wasi-sdk/share/wasi-sysroot \
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/js_runner.wasm ../runtimes/js_runner.wasm
# (run from this crate dir. The artifact lives in ../runtimes/ — a plain dir, not
# this nested crate — so it ships in the published rusm-wasm package; embedded via
# include_bytes!.)
[workspace]

[package]
name = "js-runner"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "js_runner"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
wit-bindgen = "0.46"
rquickjs = "0.9"
getrandom = "0.3"
# Outbound HTTP for the `fetch` polyfill: raw `wasi:http` (same crate + blocking-read
# pattern the js-http-runner serves with), NOT an in-guest async reactor. Each
# `pollable.block()` / `input-stream.blocking-read` suspends the fiber until the host
# has data — the guest parks, never busy-polls — and the body streams chunk-by-chunk
# (no buffering, so token-by-token LLM responses arrive as sent).
wasip2 = "1.0.3"
# Native, constant-time crypto for the `crypto.subtle` polyfill (RustCrypto) — far
# faster + safer than a pure-JS implementation in QuickJS, all pure-Rust (wasm-clean).
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
