# The rusm-ts "js-runner": a component that embeds rquickjs and runs a JS bundle,
# bridging a `Process` global to the rusm:runtime actor world. A TS app is just a
# Bun-bundled .js the runner executes — one shared, sandboxed runner per process.
#
# **Wizer-pre-initialized** (like js-http-runner): the QuickJS engine + the full JS bridge
# (host `__*` primitives + webapi/process/kv/rpc) are booted ONCE at build time and
# snapshotted into the image (`wizer_initialize`), so each spawned instance CoW-starts
# *warm* and only evals its own bundle — the engine+bridge boot is no longer paid per
# spawn. The build is a core module (wit-bindgen; wasi-sdk compiles QuickJS's C) → wizer →
# `wasm-tools component new` (preview1 adapter), checked in under ../runtimes/. Outbound
# `wasi:http` for `fetch` is a wit-bindgen import (the `process` world), not the `wasip2`
# crate, so the artifact is a wizer-able core module. Regenerate: ./build.sh
# (The artifact lives in ../runtimes/ — a plain dir, not this nested crate — so it ships in
# the published rusm-wasm package; embedded via include_bytes!.)
[workspace]

[package]
name = "js-runner"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "js_runner"

[profile.release]
opt-level = "z"
lto = true
strip = true

[dependencies]
# wit-bindgen (not the `wasip2` crate) so the build is a **core module** wizer can
# pre-initialize. It generates both the `rusm:runtime` actor world AND the outbound
# `wasi:http` bindings for `fetch` (blocking-read streaming: each `pollable.block()` /
# `input-stream.blocking-read` suspends the fiber until the host has data — the guest
# parks, never busy-polls — and the body streams chunk-by-chunk, so token-by-token LLM
# responses arrive as sent). See ./build.sh and the header above.
wit-bindgen = "0.46"
rquickjs = "0.9"
getrandom = "0.3"
# Native, constant-time crypto for the `crypto.subtle` polyfill (RustCrypto) — far
# faster + safer than a pure-JS implementation in QuickJS, all pure-Rust (wasm-clean).
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
