# A guest test fixture: a Rust WASI component that uses the rusm:runtime actor
# ABI. Built separately for wasm32-wasip2 and checked in as a prebuilt .wasm so
# `cargo test` stays hermetic. Regenerate with:
#   cd crates/rusm-wasm/tests/fixtures/actor-echo
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/actor_echo.wasm ../actor_echo.wasm
# Standalone (its own workspace) so it never builds with the host workspace.
[workspace]

[package]
name = "actor-echo"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46"
