# Guest fixture: one component, two roles. The first instance registers
# "responder" and serves request/reply; a later instance finds it and calls it —
# demonstrating component-to-component "callbacks" over the actor ABI (no new
# runtime API). Built for wasm32-wasip2 and checked in; regenerate with:
#   cargo build --target wasm32-wasip2 --release
#   cp target/wasm32-wasip2/release/callback.wasm ../callback.wasm
[workspace]

[package]
name = "callback"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.46"
